[project]
name = "comfyui_advancedrefluxcontrol"
description = "This extension offers a new Apply-Style node for Redux that allows for changing the influence of the conditioning image on the final outcome. This effectively allows for changing the style or content of an image using a prompt while using Redux."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/kaibioinfo/ComfyUI_AdvancedRefluxControl"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_AdvancedRefluxControl"
Icon = ""
